Fix layout bug.

--- a/app/components/Checkout/style.css
+++ b/app/components/Checkout/style.css
@@ -54,8 +54,14 @@
 }
 
 .label-date {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
   position: absolute;
-  right: -9999px;
+  width: 1px;
 }
 
 .input-zip-code, .input-ccv {
